# rust-native-tls

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  build.rs
.circleci/: config.yml
.github/workflows/: ci.yml
examples/: alpn.rs  google-connect.rs  simple-server-pkcs8.rs  simple-server.rs
src/: lib.rs  pem.rs  test.rs
src/backend/: mod.rs  openssl.rs  rustls.rs  schannel.rs  security_framework.rs
src/imp/: mbedtls.rs  openssl.rs  rustls.rs  schannel.rs  security_framework.rs
test/: cert.der  cert.pem  cert2.der  cert2.pem  chain.pem  client.py  identity.p12  key.pem  key2.der  key2.pem  openssl.cnf  regenerate.sh  root-ca.der  root-ca.pem
tests-ios/: prelude.rs
