[package]
name = "native-tls"
version = "0.2.10"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT/Apache-2.0"
description = "A wrapper over a platform's native TLS implementation"
repository = "https://github.com/sfackler/rust-native-tls"
readme = "README.md"

[package.metadata.docs.rs]
features = ["alpn"]
rustdoc-args = ["--cfg", "docsrs"]

[features]
vendored = ["openssl/vendored"]
alpn = ["security-framework/alpn"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
security-framework = "2.0.0"
security-framework-sys = "2.0.0"
lazy_static = "1.4.0"
libc = "0.2"
tempfile = "3.1.0"

[target.'cfg(target_os = "windows")'.dependencies]
schannel = "0.1.17"

[target.'cfg(not(any(target_os = "windows", target_os = "macos", target_os = "ios")))'.dependencies]
log = "0.4.5"
openssl = "0.10.42"
openssl-sys = "0.9.76"
openssl-probe = "0.1"

[dev-dependencies]
tempfile = "3.0"
test-cert-gen = "0.7"
