[package]
name = "native-tls"
version = "0.2.11"
authors = ["Steven Fackler <sfackler@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A wrapper over a platform's native TLS implementation"
repository = "https://github.com/sfackler/rust-native-tls"
readme = "README.md"
rust-version = "1.53.0"

[features]
vendored = ["openssl/vendored"]

[dependencies]
log = "0.4.5"
openssl = "0.10.29"
openssl-sys = "0.9.55"
openssl-probe = "0.1"

[dev-dependencies]
tempfile = "3.0"
test-cert-gen = "0.9"
